# pantheon-quant

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: tech_data.csv
data/raw/stocks_rawdata_10y/: ELET3.csv  EMBR3.csv  EQTL3.csv  PETR4.csv  PRIO3.csv
data/raw/tech_rawdata/: ABEV3.csv  B3SA3.csv  BBAS3.csv  BBDC4.csv  BPAC11.csv  CSAN3.csv  ENEV3.csv  ITUB4.csv  VALE3.csv  WEGE3.csv
notebooks/: 01. Get Tech Data.ipynb  Get Fundamental Data.ipynb  Get Tech Data.ipynb
pantheon/: __init__.py  config.py  dataset.py  features.py  plots.py
pantheon/modeling/: predict.py  train.py
references/: tickers.csv
